@startuml
skinparam classAttributeIconSize 0

package "models" {
  class UserBase {
    Visibility.PUBLIC email: EmailStr
    Visibility.PUBLIC is_active: bool
    Visibility.PUBLIC is_superuser: bool
    Visibility.PUBLIC full_name: str | None
  }
  class UserCreate {
    Visibility.PUBLIC password: str
  }
  class UserRegister {
    Visibility.PUBLIC email: EmailStr
    Visibility.PUBLIC password: str
    Visibility.PUBLIC full_name: str | None
  }
  class UserUpdate {
    Visibility.PUBLIC email: EmailStr | None
    Visibility.PUBLIC password: str | None
  }
  class UserUpdateMe {
    Visibility.PUBLIC full_name: str | None
    Visibility.PUBLIC email: EmailStr | None
  }
  class UpdatePassword {
    Visibility.PUBLIC current_password: str
    Visibility.PUBLIC new_password: str
  }
  class User {
    Visibility.PUBLIC id: uuid.UUID
    Visibility.PUBLIC hashed_password: str
    Visibility.PUBLIC items: list['Item']
  }
  class UserPublic {
    Visibility.PUBLIC id: uuid.UUID
  }
  class UsersPublic {
    Visibility.PUBLIC data: list[UserPublic]
    Visibility.PUBLIC count: int
  }
  class ItemBase {
    Visibility.PUBLIC title: str
    Visibility.PUBLIC description: str | None
  }
  class ItemCreate {
  }
  class ItemUpdate {
    Visibility.PUBLIC title: str | None
  }
  class Item {
    Visibility.PUBLIC id: uuid.UUID
    Visibility.PUBLIC title: str
    Visibility.PUBLIC owner_id: uuid.UUID
    Visibility.PUBLIC owner: User | None
  }
  class ItemPublic {
    Visibility.PUBLIC id: uuid.UUID
    Visibility.PUBLIC owner_id: uuid.UUID
  }
  class ItemsPublic {
    Visibility.PUBLIC data: list[ItemPublic]
    Visibility.PUBLIC count: int
  }
  class Message {
    Visibility.PUBLIC message: str
  }
  class Token {
    Visibility.PUBLIC access_token: str
    Visibility.PUBLIC token_type: str
  }
  class TokenPayload {
    Visibility.PUBLIC sub: str | None
  }
  class NewPassword {
    Visibility.PUBLIC token: str
    Visibility.PUBLIC new_password: str
  }
}

' Relationships
SQLModel <|-- "models".UserBase
UserBase <|-- "models".UserCreate
SQLModel <|-- "models".UserRegister
UserBase <|-- "models".UserUpdate
SQLModel <|-- "models".UserUpdateMe
SQLModel <|-- "models".UpdatePassword
UserBase <|-- "models".User
UserBase <|-- "models".UserPublic
SQLModel <|-- "models".UsersPublic
SQLModel <|-- "models".ItemBase
ItemBase <|-- "models".ItemCreate
ItemBase <|-- "models".ItemUpdate
ItemBase <|-- "models".Item
ItemBase <|-- "models".ItemPublic
SQLModel <|-- "models".ItemsPublic
SQLModel <|-- "models".Message
SQLModel <|-- "models".Token
SQLModel <|-- "models".TokenPayload
SQLModel <|-- "models".NewPassword
@enduml